--- a/50projects50days/main/index.html
+++ b/50projects50days/main/index.html
@@ -16,7 +16,8 @@
 		<title>My_50_projects</title>
 	</head>
 	<body>
-		<h1>Expanding Cards</h1>
+		<div class = "tooltip"><h1>Expanding Cards</h1><span class="tooltiptext">Just click on a panel!</span></div>
+
 
 		<div class="container">
 			<div class="panel" style="background-color: red;">
