Changed Web Icon

--- a/50projects50days/main/index.html
+++ b/50projects50days/main/index.html
@@ -13,6 +13,7 @@
         /> -->
 
 		<link rel="stylesheet" href="style.css" />
+		<link rel="icon" type="image/x-icon" href="/angular-50projects50days/src/assets/logo/orange_d.svg">
 		<title>My_50_projects</title>
 	</head>
 	<body>
