--- a/angular-50projects50days/src/index.html
+++ b/angular-50projects50days/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>angular-50projects50days</title>
+  <title>My 50 Projects</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/logo/orange_d.svg">
 </head>
 <body>
   <app-root></app-root>
