--- a/top_landing_page/index.html
+++ b/top_landing_page/index.html
@@ -5,8 +5,74 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page</title>
   <link rel="stylesheet" href="styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
-  
+  <header>
+    <section class="header-bar">
+      <p>Header Logo</p>
+      <ul>
+        <li><a href="">header link one</a></li>
+        <li><a href="">header link two</a></li>
+        <li><a href="">header link three</a></li>
+      </ul>
+    </section>
+    <section class="hero">
+      <div>
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes here under the main title. 
+          It's a smaller font and the color is lower contrast
+        </p>
+        <button>Sign Up</button>
+      </div>
+      <img src="src/night-purple-city.jpg" alt="night-purple-city">
+    </section>
+  </header>
+
+  <section class="content-info">
+    <h2>Some random information.</h2>
+    <div class="cards">
+      <div class="card">
+        <img src="src/orange-paper-design.jpg" alt="orange-paper-design">
+        this is some subtext under an illustration or image
+      </div>
+      <div class="card">
+        <img src="src/orange-paper-design.jpg" alt="orange-paper-design">
+        this is some subtext under an illustration or image
+      </div>
+      <div class="card">
+        <img src="src/orange-paper-design.jpg" alt="orange-paper-design">
+        this is some subtext under an illustration or image
+      </div>
+      <div class="card">
+        <img src="src/orange-paper-design.jpg" alt="orange-paper-design">
+        this is some subtext under an illustration or image
+      </div>      
+    </div>
+  </section>
+
+  <section class="content-quote">
+    <i class="quote-text">
+      This is an inspiring quote, or a testimonial from a customer.
+      Maybe it's just filling space, or maybe people will actually read it.
+      Who knows? All I know is that it looks nice.
+    </i>
+    <div class="thor">
+      -Thor, God of Thunder
+    </div>
+  </section>
+
+  <section class="banner">
+    <div class="text">
+      <h3>Call to action! It's time!</h3>
+      Sign up for our product by clicking that button right over there!
+    </div>
+    <button>Sign up</button>
+  </section>
+
+  <footer>
+    Copyright &#169; The Odin Project 2021
+  </footer>
 </body>
 </html>
