--- a/top_etch-a-sketch/index.html
+++ b/top_etch-a-sketch/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>Etch-A-Sketch</h1>
+  <div class="canvasContainer" id="canvas"></div>
 
   <script src="script.js"></script>
 </body>
