Add grid size adjustment functionality

--- a/top_etch-a-sketch/index.html
+++ b/top_etch-a-sketch/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
   <h1>Etch-A-Sketch</h1>
-  <div class="canvasContainer" id="canvas"></div>
+  <div id="canvasContainer"></div>
+  <div id="optionsContainer">
+    <div id="gridSizeText">16x16</div>
+    <input type="range" id="gridSizeSlider" value="16" min="16" max="64">
+  </div>
 
   <script src="script.js"></script>
 </body>
