Add first calculator UI with buttons and display

--- a/top_calculator/index.html
+++ b/top_calculator/index.html
@@ -4,9 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="device">
+
+    <div class="display">
+      <p id="displayText">r</p>
+    </div>
+
+    <div class="control-pad">
+      <div class="top-buttons">
+        <button>c</button>
+        <button><</button>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <button>7</button>
+          <button>4</button>
+          <button>1</button>
+          <button>.</button>
+        </div>
+        <div class="column">
+          <button>8</button>
+          <button>5</button>
+          <button>2</button>
+          <button>0</button>
+        </div>
+        <div class="column">
+          <button>9</button>
+          <button>6</button>
+          <button>3</button>
+          <button>=</button>
+        </div>
+        <div class="column">
+          <button>/</button>
+          <button>x</button>
+          <button>-</button>
+          <button>+</button>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
   <script src="script.js"></script>
 </body>
