Fix control pad div ID for consistency in HTML structure

--- a/top_calculator/index.html
+++ b/top_calculator/index.html
@@ -13,7 +13,7 @@
       <p id="displayText">r</p>
     </div>
 
-    <div class="control-pad">
+    <div id="controlPad">
       <div class="top-buttons">
         <button>c</button>
         <button><</button>
