Fix image source paths in index.html for consistency

--- a/top_landing_page/index.html
+++ b/top_landing_page/index.html
@@ -26,7 +26,7 @@
         </p>
         <button>Sign Up</button>
       </div>
-      <img src="src/night-purple-city.jpg" alt="night-purple-city">
+      <img src="images/night-purple-city.jpg" alt="night-purple-city">
     </section>
   </header>
 
@@ -34,19 +34,19 @@
     <h2>Some random information.</h2>
     <div class="cards">
       <div class="card">
-        <img src="src/orange-paper-design.jpg" alt="orange-paper-design">
+        <img src="images/orange-paper-design.jpg" alt="orange-paper-design">
         this is some subtext under an illustration or image
       </div>
       <div class="card">
-        <img src="src/orange-paper-design.jpg" alt="orange-paper-design">
+        <img src="images/orange-paper-design.jpg" alt="orange-paper-design">
         this is some subtext under an illustration or image
       </div>
       <div class="card">
-        <img src="src/orange-paper-design.jpg" alt="orange-paper-design">
+        <img src="images/orange-paper-design.jpg" alt="orange-paper-design">
         this is some subtext under an illustration or image
       </div>
       <div class="card">
-        <img src="src/orange-paper-design.jpg" alt="orange-paper-design">
+        <img src="images/orange-paper-design.jpg" alt="orange-paper-design">
         this is some subtext under an illustration or image
       </div>      
     </div>
