Enhance brand and display style to Calculator

--- a/top_calculator/index.html
+++ b/top_calculator/index.html
@@ -10,14 +10,15 @@
 <body>
   <main class="device">
     <header class="brand">
-      <span class="brandName">SOLID STATE CALC · V2</span>
+      <span class="brandModel">TOP CALCULATOR · V2</span>
+      <span class="brandName">dennisdude.io</span>
     </header>
 
     <section class="display">
       <output id="displayText">0</output>
     </section>
 
-    <section id="controlPad">
+    <section class="controlPad">
       <div class="top-buttons">
         <button>c</button>
         <button><</button>
