[Calculator] Fix controlPad ID reference in HTML and JavaScript

--- a/top_calculator/index.html
+++ b/top_calculator/index.html
@@ -18,7 +18,7 @@
       <output id="displayText">0</output>
     </section>
 
-    <section class="controlPad">
+    <section id="buttons" class="controlPad">
       <div class="top-buttons">
         <button>c</button>
         <button><</button>
