[Calculator]  Add buttons layout using Flexbox and 3D look with box shadow

--- a/top_calculator/index.html
+++ b/top_calculator/index.html
@@ -19,35 +19,28 @@
     </section>
 
     <section id="buttons" class="controlPad">
-      <div class="top-buttons">
-        <button>c</button>
-        <button><</button>
+      <div class="digitsButtons">
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>0</button>
+        <button>,</button>
       </div>
-      <div class="columns">
-        <div class="column">
-          <button>7</button>
-          <button>4</button>
-          <button>1</button>
-          <button>.</button>
-        </div>
-        <div class="column">
-          <button>8</button>
-          <button>5</button>
-          <button>2</button>
-          <button>0</button>
-        </div>
-        <div class="column">
-          <button>9</button>
-          <button>6</button>
-          <button>3</button>
-          <button>=</button>
-        </div>
-        <div class="column">
-          <button>/</button>
-          <button>x</button>
-          <button>-</button>
-          <button>+</button>
-        </div>
+
+      <div class="operatorButtons">
+        <button><</button>
+        <button>c</button>
+        <button>x</button>
+        <button>/</button>
+        <button>+</button>
+        <button>-</button>
+        <button class="equalButton">=</button>
       </div>
     </section>
   </main>
