[Calculator] Add advanced calculation logic and initial error checking

--- a/top_calculator/index.html
+++ b/top_calculator/index.html
@@ -15,32 +15,32 @@
     </header>
 
     <section class="display">
-      <output id="displayText">0</output>
+      <output id="displayText">_</output>
     </section>
 
     <section id="buttons" class="controlPad">
       <div class="digitsButtons">
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>0</button>
-        <button>,</button>
+        <button data-key="digit">7</button>
+        <button data-key="digit">8</button>
+        <button data-key="digit">9</button>
+        <button data-key="digit">4</button>
+        <button data-key="digit">5</button>
+        <button data-key="digit">6</button>
+        <button data-key="digit">1</button>
+        <button data-key="digit">2</button>
+        <button data-key="digit">3</button>
+        <button data-key="digit">0</button>
+        <button data-key="dot">,</button>
       </div>
 
       <div class="operatorButtons">
-        <button><</button>
-        <button>c</button>
-        <button>x</button>
-        <button>/</button>
-        <button>+</button>
-        <button>-</button>
-        <button class="equalButton">=</button>
+        <button data-key="back"><</button>
+        <button data-key="clear">c</button>
+        <button data-key="operator">x</button>
+        <button data-key="operator">/</button>
+        <button data-key="operator">+</button>
+        <button data-key="operator">-</button>
+        <button data-key="equal" class="equalButton">=</button>
       </div>
     </section>
   </main>
