[Calculator] Add togglePlusMinus button and logic

--- a/top_calculator/index.html
+++ b/top_calculator/index.html
@@ -31,6 +31,7 @@
         <button data-key="digit">3</button>
         <button data-key="digit">0</button>
         <button data-key="dot">,</button>
+        <button data-key="togglePlusMinus">+/-</button>
       </div>
 
       <div class="operatorButtons">
