[Calculator] Add old srt screen effect to display

--- a/top_calculator/index.html
+++ b/top_calculator/index.html
@@ -14,7 +14,7 @@
       <span class="brandName">dennisdude.io</span>
     </header>
 
-    <section class="display">
+    <section class="display crt">
       <output id="displayText">_</output>
     </section>
 
