[Calculator] Small styling design changes

--- a/top_calculator/index.html
+++ b/top_calculator/index.html
@@ -10,13 +10,15 @@
 <body>
   <main class="device">
     <header class="brand">
-      <span class="brandModel">TOP CALCULATOR · V2</span>
+      <span class="brandModel">CALCULATOR</span>
       <span class="brandName">dennisdude.io</span>
     </header>
 
     <section class="display crt">
       <output id="displayText">_</output>
     </section>
+
+    <div class="ridges"></div>
 
     <section id="buttons" class="controlPad">
       <div class="digitsButtons">
