[Calculator] Changed backspace arrow symbol

--- a/top_calculator/index.html
+++ b/top_calculator/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="operatorButtons">
-        <button data-key="back"><</button>
+        <button data-key="back">↩</button>
         <button data-key="clear">c</button>
         <button data-key="operator">x</button>
         <button data-key="operator">/</button>
