[Calculator] Add colored buttons

--- a/top_calculator/index.html
+++ b/top_calculator/index.html
@@ -37,13 +37,13 @@
       </div>
 
       <div class="operatorButtons">
-        <button data-key="back">↩</button>
-        <button data-key="clear">c</button>
+        <button data-key="back" class="goldButton">↩</button>
+        <button data-key="clear" class="redButton">c</button>
         <button data-key="operator">x</button>
         <button data-key="operator">/</button>
         <button data-key="operator">+</button>
         <button data-key="operator">-</button>
-        <button data-key="equal" class="equalButton">=</button>
+        <button data-key="equal" class="bigButton blueButton">=</button>
       </div>
     </section>
   </main>
