Add star to calculator live preview link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <ul>
     <li><a href="top_landing_page/index.html">Landing Page</a></li>
     <li><a href="top_etch-a-sketch/index.html">Etch-a-Sketch</a></li>
-    <li><a href="top_calculator/index.html">Calculator</a></li>
+    <li><a href="top_calculator/index.html">Calculator</a><span> ★</span></li>
   </ul>
 </body>
 </html>
